--- a/rup4ik/app/AndroidManifest.xml
+++ b/rup4ik/app/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_launcher"
 		android:roundIcon="@drawable/round_ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppBaseTheme"
 		android:resizeableActivity = "true">
         <activity
             android:name=".MainActivity"
